find bug poprawki